# ENSAI-2A-projet-info

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: cocktails.json  data_insert.sql  ingredients.json  init.sql  mock.sql
doc/: diag_activites.md  diag_cas_utilisation.txt  diag_classes.md  diag_ex.py  diag_gantt.html  diag_gantt.md  diag_sequence.md
doc/suivi/: 2024.09.13-semaine1.md  2025.09.04-semaine1.md  2025.09.11-semaine2.md  2025.09.18-semaine3.md  2025.09.23-semaine4.md  2025.10.02-semaine5.md  2025.10.09-semaine6.md  2025.11.04.md  2025.11.06.md  2025.11.13.md  2025.11.14.md
src/: app.py  main.py
src/api/: securite.py
src/api/routers/: administration.py  auth.py  favoris.py  ingredients.py  recherche.py  utilisateur.py
src/business_object/: abstractFiltre.py  abstract_filtre.py  cocktail.py  favori.py  filtre_cocktail.py  filtre_ingredient.py  ingredient.py  utilisateur.py
src/dao/: admin_cocktail_dao.py  cocktail_dao.py  db_connection.py  favoris_dao.py  ingredient_dao.py  ingredient_utilisateur_dao.py  recherche_dao.py  utilisateur_dao.py
src/service/: admin_cocktail_service.py  cocktail_service.py  favori_service.py  favoris_service.py  ingredient_service.py  ingredient_utilisateur_service.py  recherche_service.py  utilisateur_service.py
src/tests/test_dao/: test_cocktail_dao.py  test_ingredient_dao.py  test_ingredient_utilisateur_dao.py  test_recherche_dao.py  test_utilisateur_dao.py
src/utils/: combinations.py  diverse.py  init_database.py  reset_database.py  scrap_cocktails.py  scrap_ingredients.py  sql_utils.py
(+8 files in other folders)
