[project]
name = "ensai-2a-projet-info"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.121.0",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "tabulate>=0.9.0",
]
